// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TitleBar Should display correctly with action item as: Button 1`] = `
<DocumentFragment>
  .emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background-color: transparent;
  border-style: solid;
  border-color: #e4e4e4;
  border-width: 0 0 1px 0;
}

@media screen and (max-width:1023px) {
  .emotion-8 {
    padding: 12px 16px;
  }
}

@media screen and (min-width:1024px) {
  .emotion-8 {
    padding: 16px 24px;
  }
}

.emotion-0 {
  display: inline-block;
  margin: 0;
  color: #0a0a0a;
}

@media screen and (max-width:1023px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 28px;
    line-height: 1.2857142857142858;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.2928571428571429em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3553571428571429em;
  }
}

@media screen and (min-width:1024px) and (max-width:1439px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 32px;
    line-height: 1.25;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.275em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3375em;
  }
}

@media screen and (min-width:1440px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 40px;
    line-height: 1.3;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.30000000000000004em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.36250000000000004em;
  }
}

.emotion-1 {
  margin-right: 16px;
}

@media screen {
  .emotion-7 {
    display: none;
  }
}

@media screen and (min-width:480px) {
  .emotion-7 {
    display: block;
  }
}

@media screen and (min-width:768px) {
  .emotion-7 {
    display: block;
  }
}

@media screen and (min-width:1024px) {
  .emotion-7 {
    display: block;
  }
}

@media screen and (min-width:1440px) {
  .emotion-7 {
    display: block;
  }
}

.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-5 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  padding: 12px 16px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  background-color: #0a68c1;
  border-radius: 8px;
  color: #ffffff;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
}

.emotion-5 svg {
  width: 24px;
  height: 24px;
}

.emotion-5 svg {
  fill: #ffffff;
  color: #ffffff;
}

.emotion-5:hover:not(:disabled) {
  background-color: #02509b;
}

.emotion-5:active:not(:disabled) {
  background-color: #01396e;
}

.emotion-5:disabled {
  background-color: #e4e4e4;
  color: #9c9c9c;
}

.emotion-5:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-2 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

.emotion-2::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3642857142857143em + 1.2px);
}

.emotion-2::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

<div
    class="emotion-8"
  >
    <div
      class="emotion-1"
    >
      <h3
        class="emotion-0"
      >
        Test title of title bar
      </h3>
    </div>
    <div
      class="emotion-7"
    >
      <div
        class="emotion-6"
      >
        <button
          class="emotion-5"
          data-testid="button"
          type="button"
        >
          <div
            class="emotion-4"
          >
            <div
              class="emotion-3"
            >
              <span
                class="emotion-2"
              >
                Default button
              </span>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TitleBar Should display correctly with action item as: Link 1`] = `
<DocumentFragment>
  .emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background-color: transparent;
  border-style: solid;
  border-color: #e4e4e4;
  border-width: 0 0 1px 0;
}

@media screen and (max-width:1023px) {
  .emotion-6 {
    padding: 12px 16px;
  }
}

@media screen and (min-width:1024px) {
  .emotion-6 {
    padding: 16px 24px;
  }
}

.emotion-0 {
  display: inline-block;
  margin: 0;
  color: #0a0a0a;
}

@media screen and (max-width:1023px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 28px;
    line-height: 1.2857142857142858;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.2928571428571429em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3553571428571429em;
  }
}

@media screen and (min-width:1024px) and (max-width:1439px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 32px;
    line-height: 1.25;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.275em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3375em;
  }
}

@media screen and (min-width:1440px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 40px;
    line-height: 1.3;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.30000000000000004em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.36250000000000004em;
  }
}

.emotion-1 {
  margin-right: 16px;
}

@media screen {
  .emotion-5 {
    display: none;
  }
}

@media screen and (min-width:480px) {
  .emotion-5 {
    display: block;
  }
}

@media screen and (min-width:768px) {
  .emotion-5 {
    display: block;
  }
}

@media screen and (min-width:1024px) {
  .emotion-5 {
    display: block;
  }
}

@media screen and (min-width:1440px) {
  .emotion-5 {
    display: block;
  }
}

.emotion-4 {
  display: inline-block;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  color: #2f75d7;
}

.emotion-4 svg {
  fill: #2f75d7;
  color: #2f75d7;
}

.emotion-4:hover:not(:disabled) {
  color: #2f75d7;
}

.emotion-4:hover:not(:disabled) svg {
  fill: #2f75d7;
  color: #2f75d7;
}

.emotion-4:active:not(:disabled) {
  color: #2f75d7;
}

.emotion-4:active:not(:disabled) svg {
  fill: #2f75d7;
  color: #2f75d7;
}

.emotion-4:visited:not(:disabled) {
  color: #903d91;
}

.emotion-4:visited:not(:disabled) svg {
  fill: #903d91;
  color: #903d91;
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .emotion-4 {
    vertical-align: text-bottom;
  }
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-2 {
  margin: 0;
  padding: 1px 0;
  display: inline-block;
  display: block;
}

<div
    class="emotion-6"
  >
    <div
      class="emotion-1"
    >
      <h3
        class="emotion-0"
      >
        Test title of title bar
      </h3>
    </div>
    <div
      class="emotion-5"
    >
      <a
        class="emotion-4"
        href="/"
      >
        <span
          class="emotion-3"
        >
          <span
            class="emotion-2"
          >
            Link
          </span>
        </span>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TitleBar should apply correctly the custom presets  1`] = `
<DocumentFragment>
  .emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 4px 8px;
  color: #2e2e2e;
}

.emotion-0 {
  display: inline-block;
  margin: 0;
  color: #0a0a0a;
}

@media screen and (max-width:479px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 18px;
    line-height: 1.3333333333333333;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.31666666666666665em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.37916666666666665em;
  }
}

@media screen and (min-width:480px) and (max-width:767px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 20px;
    line-height: 1.2;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.25em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3125em;
  }
}

@media screen and (min-width:768px) and (max-width:1023px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 24px;
    line-height: 1.3333333333333333;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: calc(-0.31666666666666665em + 1px);
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: calc(-0.37916666666666665em + 1px);
  }
}

@media screen and (min-width:1024px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 28px;
    line-height: 1.2857142857142858;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.2928571428571429em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3553571428571429em;
  }
}

<div
    class="emotion-2"
  >
    <div
      class="emotion-1"
    >
      <h3
        class="emotion-0"
      >
        Test title of title bar
      </h3>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TitleBar should display correctly as renders with h1 size 1`] = `
<DocumentFragment>
  .emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background-color: transparent;
  border-style: solid;
  border-color: #e4e4e4;
  border-width: 0 0 1px 0;
}

@media screen and (max-width:1023px) {
  .emotion-2 {
    padding: 12px 16px;
  }
}

@media screen and (min-width:1024px) {
  .emotion-2 {
    padding: 16px 24px;
  }
}

.emotion-0 {
  display: inline-block;
  margin: 0;
  color: #0a0a0a;
}

@media screen and (max-width:1023px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 28px;
    line-height: 1.2857142857142858;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.2928571428571429em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3553571428571429em;
  }
}

@media screen and (min-width:1024px) and (max-width:1439px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 32px;
    line-height: 1.25;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.275em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3375em;
  }
}

@media screen and (min-width:1440px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 40px;
    line-height: 1.3;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.30000000000000004em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.36250000000000004em;
  }
}

<div
    class="emotion-2"
  >
    <div
      class="emotion-1"
    >
      <h1
        class="emotion-0"
      >
        Test title of title bar
      </h1>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TitleBar should display correctly as renders with h2 size 1`] = `
<DocumentFragment>
  .emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background-color: transparent;
  border-style: solid;
  border-color: #e4e4e4;
  border-width: 0 0 1px 0;
}

@media screen and (max-width:1023px) {
  .emotion-2 {
    padding: 12px 16px;
  }
}

@media screen and (min-width:1024px) {
  .emotion-2 {
    padding: 16px 24px;
  }
}

.emotion-0 {
  display: inline-block;
  margin: 0;
  color: #0a0a0a;
}

@media screen and (max-width:1023px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 28px;
    line-height: 1.2857142857142858;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.2928571428571429em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3553571428571429em;
  }
}

@media screen and (min-width:1024px) and (max-width:1439px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 32px;
    line-height: 1.25;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.275em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3375em;
  }
}

@media screen and (min-width:1440px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 40px;
    line-height: 1.3;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.30000000000000004em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.36250000000000004em;
  }
}

<div
    class="emotion-2"
  >
    <div
      class="emotion-1"
    >
      <h2
        class="emotion-0"
      >
        Test title of title bar
      </h2>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TitleBar should display correctly as renders with h3 size 1`] = `
<DocumentFragment>
  .emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background-color: transparent;
  border-style: solid;
  border-color: #e4e4e4;
  border-width: 0 0 1px 0;
}

@media screen and (max-width:1023px) {
  .emotion-2 {
    padding: 12px 16px;
  }
}

@media screen and (min-width:1024px) {
  .emotion-2 {
    padding: 16px 24px;
  }
}

.emotion-0 {
  display: inline-block;
  margin: 0;
  color: #0a0a0a;
}

@media screen and (max-width:1023px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 28px;
    line-height: 1.2857142857142858;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.2928571428571429em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3553571428571429em;
  }
}

@media screen and (min-width:1024px) and (max-width:1439px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 32px;
    line-height: 1.25;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.275em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3375em;
  }
}

@media screen and (min-width:1440px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 40px;
    line-height: 1.3;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.30000000000000004em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.36250000000000004em;
  }
}

<div
    class="emotion-2"
  >
    <div
      class="emotion-1"
    >
      <h3
        class="emotion-0"
      >
        Test title of title bar
      </h3>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TitleBar should display correctly as renders with h4 size 1`] = `
<DocumentFragment>
  .emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background-color: transparent;
  border-style: solid;
  border-color: #e4e4e4;
  border-width: 0 0 1px 0;
}

@media screen and (max-width:1023px) {
  .emotion-2 {
    padding: 12px 16px;
  }
}

@media screen and (min-width:1024px) {
  .emotion-2 {
    padding: 16px 24px;
  }
}

.emotion-0 {
  display: inline-block;
  margin: 0;
  color: #0a0a0a;
}

@media screen and (max-width:1023px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 28px;
    line-height: 1.2857142857142858;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.2928571428571429em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3553571428571429em;
  }
}

@media screen and (min-width:1024px) and (max-width:1439px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 32px;
    line-height: 1.25;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.275em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3375em;
  }
}

@media screen and (min-width:1440px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 40px;
    line-height: 1.3;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.30000000000000004em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.36250000000000004em;
  }
}

<div
    class="emotion-2"
  >
    <div
      class="emotion-1"
    >
      <h4
        class="emotion-0"
      >
        Test title of title bar
      </h4>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TitleBar should display correctly as renders with h5 size 1`] = `
<DocumentFragment>
  .emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background-color: transparent;
  border-style: solid;
  border-color: #e4e4e4;
  border-width: 0 0 1px 0;
}

@media screen and (max-width:1023px) {
  .emotion-2 {
    padding: 12px 16px;
  }
}

@media screen and (min-width:1024px) {
  .emotion-2 {
    padding: 16px 24px;
  }
}

.emotion-0 {
  display: inline-block;
  margin: 0;
  color: #0a0a0a;
}

@media screen and (max-width:1023px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 28px;
    line-height: 1.2857142857142858;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.2928571428571429em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3553571428571429em;
  }
}

@media screen and (min-width:1024px) and (max-width:1439px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 32px;
    line-height: 1.25;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.275em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3375em;
  }
}

@media screen and (min-width:1440px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 40px;
    line-height: 1.3;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.30000000000000004em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.36250000000000004em;
  }
}

<div
    class="emotion-2"
  >
    <div
      class="emotion-1"
    >
      <h5
        class="emotion-0"
      >
        Test title of title bar
      </h5>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TitleBar should display correctly as renders with h6 size 1`] = `
<DocumentFragment>
  .emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background-color: transparent;
  border-style: solid;
  border-color: #e4e4e4;
  border-width: 0 0 1px 0;
}

@media screen and (max-width:1023px) {
  .emotion-2 {
    padding: 12px 16px;
  }
}

@media screen and (min-width:1024px) {
  .emotion-2 {
    padding: 16px 24px;
  }
}

.emotion-0 {
  display: inline-block;
  margin: 0;
  color: #0a0a0a;
}

@media screen and (max-width:1023px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 28px;
    line-height: 1.2857142857142858;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.2928571428571429em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3553571428571429em;
  }
}

@media screen and (min-width:1024px) and (max-width:1439px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 32px;
    line-height: 1.25;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.275em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3375em;
  }
}

@media screen and (min-width:1440px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 40px;
    line-height: 1.3;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.30000000000000004em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.36250000000000004em;
  }
}

<div
    class="emotion-2"
  >
    <div
      class="emotion-1"
    >
      <h6
        class="emotion-0"
      >
        Test title of title bar
      </h6>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TitleBar should display correctly with default styles and given title 1`] = `
<DocumentFragment>
  .emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background-color: transparent;
  border-style: solid;
  border-color: #e4e4e4;
  border-width: 0 0 1px 0;
}

@media screen and (max-width:1023px) {
  .emotion-2 {
    padding: 12px 16px;
  }
}

@media screen and (min-width:1024px) {
  .emotion-2 {
    padding: 16px 24px;
  }
}

.emotion-0 {
  display: inline-block;
  margin: 0;
  color: #0a0a0a;
}

@media screen and (max-width:1023px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 28px;
    line-height: 1.2857142857142858;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.2928571428571429em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3553571428571429em;
  }
}

@media screen and (min-width:1024px) and (max-width:1439px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 32px;
    line-height: 1.25;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.275em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3375em;
  }
}

@media screen and (min-width:1440px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 40px;
    line-height: 1.3;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.30000000000000004em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.36250000000000004em;
  }
}

<div
    class="emotion-2"
  >
    <div
      class="emotion-1"
    >
      <h3
        class="emotion-0"
      >
        Test title of title bar
      </h3>
    </div>
  </div>
</DocumentFragment>
`;
